# rgb-deck

./: Cargo.toml  Makefile  install.sh  rust-toolchain.toml
.cargo/: config.toml
src/: keypad.rs  lib.rs  main.rs  rgb.rs  usb.rs
